<resources>
    <string name="app_name">MVC</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="report_successLogin">You are now logged in !</string>
    <string name="report_unableToLogin">Unable to log you with theses credentials</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_success">Login OK !</string>
    <string name="login_progress">Logging in...</string>
    <string name="login_error">Login Failed !</string>
</resources>
