<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controllers.activities.LoginActivity"
    >

    <TextView
        android:text="@string/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="22sp"
        android:textAlignment="center"
        />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/login_button"
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_colorError="@color/red_error"
        custom:pb_textComplete="@string/login_success"
        custom:pb_textProgress="@string/login_progress"
        custom:pb_textError="@string/login_error"
        android:layout_marginTop="12dp"
        />

    <com.dd.processbutton.FlatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openRegisterForm"
        android:text="@string/register_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        android:layout_marginTop="20dp"
        />

    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/login_button_fb"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:paddingBottom="10dp"-->
        <!--/>-->

</LinearLayout>